Give Alpha her own face, and make the Spotify QR work from any phone
The photo frame never earned its keep, so it is gone. The Spotify QR flow was
silently broken: since April 2025 Spotify rejects plain-http redirect URIs that
are not loopback, so the documented LAN callback could never complete. The login
now bounces through one static HTTPS page (GitHub Pages) that carries the Pi's
LAN address inside OAuth `state`, which needs no per-network setup and no
server-side state at gift time.

The UI stops looking machine-generated: Space Grotesk bundled in the jar, a
hand-mixed palette in place of Tailwind's defaults, every icon drawn from one
hand, Alpha's constellation on the home screen, and her own face, signature and
alarm greeting. FxmlContractTest now fails the build on a broken template.

Generated with Codebuff 🤖
Co-Authored-By: Codebuff <noreply@codebuff.com>